--- a/styles.css
+++ b/styles.css
@@ -18,4 +18,30 @@
     height: 100%;
     background: rgba(223, 208, 208, 0.6);
     border-radius: 20px;
+    overflow: auto;
+}
+
+nav{
+    width: 10%;
+    background: rgba(255, 254, 254, 1.3);
+    height: 100%;
+    /* padding: 15px; */
+    overflow: hidden;
+    z-index: 1;
+    border-right: 1px solid rgb(153, 153, 143);
+}
+
+nav a{
+    display: block;
+    padding: 10px;
+    width: 100%;
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    font-size: 1em;
+    margin-top: 20px;
+}
+
+nav a:hover{
+    color: rgb(255, 255, 255);
+    background: rgb(196, 189, 189);
 }
