--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,10 @@ nav{
     background: rgba(255, 254, 254, 1.3);
     height: 100%;
     /* padding: 15px; */
-    overflow: hidden;
-    z-index: 1;
+    float: left;
+    /* z-index: 1; */
     border-right: 1px solid rgb(153, 153, 143);
+    position: ;
 }
 
 nav a{
@@ -39,9 +40,24 @@ nav a{
     color: rgb(0, 0, 0);
     font-size: 1em;
     margin-top: 20px;
+
 }
 
 nav a:hover{
     color: rgb(255, 255, 255);
     background: rgb(196, 189, 189);
+}
+
+.content{
+    width: 90%;
+    background-color: black;
+    height: 100%;
+    float: left;
+    overflow: auto;
+}
+
+.home{
+    height: 250vh;
+    background-color: red;
+
 }
