--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 .container{
     height: 100vh;
-    background: linear-gradient(130deg, #abd18c, #c01dcfde);
+    background: #1A1A2E;
     padding: 10px;
     overflow: hidden;
     padding-left: 5%;
@@ -16,20 +16,19 @@
 
 .container-main{
     height: 100%;
-    background: rgba(223, 208, 208, 0.6);
     border-radius: 20px;
     overflow: auto;
+    box-shadow: 2px 2px 2px #464242;
 }
 
 nav{
     width: 10%;
-    background: rgba(255, 254, 254, 1.3);
+    background: rgb(255, 196, 4);
     height: 100%;
     /* padding: 15px; */
     float: left;
     /* z-index: 1; */
     border-right: 1px solid rgb(153, 153, 143);
-    position: ;
 }
 
 nav a{
@@ -50,7 +49,6 @@ nav a:hover{
 
 .content{
     width: 90%;
-    background-color: black;
     height: 100%;
     float: left;
     overflow: auto;
@@ -58,7 +56,7 @@ nav a:hover{
 
 .home{
     height: 100%;
-    background-color: #8b7777;
+    background: rgba(0, 0, 0, 0.4);
 
 }
 
@@ -74,4 +72,38 @@ nav a:hover{
     width: 50%;
     margin: 0;
     padding: 10px;
+}
+
+.mytext{
+    margin-top: 23%;
+    color: whitesmoke;
+    padding-left: 26px;
+}
+
+.mytext h1{
+    font-size: 5rem;
+}
+p > span{
+    display: inline-block;
+    width: 30%;
+    height: 1px;
+    border-bottom: 1px solid white ;
+}
+
+.mytext label{
+    padding: 10px;
+    background-color: rgb(255, 196, 4) ;
+    display: block;
+    width: 20%;
+    color: black;
+    margin-top: 30px;
+}
+
+.under{
+    display: inline-block;
+    width: 25%;
+    height: 1px;
+    border-bottom: 1px solid rgb(255, 196, 4);
+    padding-top: 20px;
+    
 }
