--- a/styles.css
+++ b/styles.css
@@ -206,3 +206,50 @@ p > span{
 
 }
 
+.html5{
+    background-color: #f2f2f2;
+    border-radius: 10px;
+}
+.html5 span{
+    width: 98%;
+    background: linear-gradient(45deg, #ecb3ff, #80aaff);
+    display: block;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+}
+
+.js{
+    background-color: #f2f2f2;
+    border-radius: 10px;
+}
+.js span{
+    width: 89%;
+    background: linear-gradient(45deg, #ecb3ff, #80aaff);
+    display: block;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+}
+
+.html5 span{
+    width: 98%;
+    background: linear-gradient(45deg, #ecb3ff, #80aaff);
+    display: block;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+}
+
+.python{
+    background-color: #f2f2f2;
+    border-radius: 10px;
+}
+.python span{
+    width: 95%;
+    background: linear-gradient(45deg, #ecb3ff, #80aaff);
+    display: block;
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+}
