--- a/styles.css
+++ b/styles.css
@@ -276,8 +276,6 @@ header h1{
 }
 .form-card{
     width: 80%;
-    
-    box-shadow: 2px 2px 2px #f2f2f2;
     background: white;
     margin: 0 auto;
     padding: 30px;
@@ -293,7 +291,7 @@ form input{
     color: green;
 }
 form button{
-    background-color: green;
+    background-color: rgb(139, 190, 139);
     border: none;
     width: 20%;
     padding: 10px;
